# haskellx-code

./: LICENSE  README.md  default.nix  docker.nix  hello-service.cabal  shell.nix  test.nix
src/: Main.hs
